# cheese-flow

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  hooks.json  justfile  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/rulesets/: README.md  main.json
.github/workflows/: ci.yml
agents/: age-arch.md.eta  age-assertions.md.eta  age-complexity.md.eta  age-correctness.md.eta  age-deslop.md.eta  age-encap.md.eta  age-encapsulation.md.eta  age-history.md.eta  age-nih.md.eta  age-precedent.md.eta  age-safety.md.eta  age-security.md.eta  age-spec.md.eta  age-yagni.md.eta  assertion-review.md.eta  basic-agent.md.eta  cleanup-wolf.md.eta  cook-critic.md.eta  cook.md.eta  culture-critic.md.eta  culture.md.eta  cut.md.eta  fromage-cook.md.eta  fromage-cut.md.eta  fromage-press.md.eta  milknado-executor.md.eta  milknado-planner.md.eta  nih-scanner.md.eta  press.md.eta  skill-improver-activation.md.eta  skill-improver-context.md.eta  skill-improver-output-format.md.eta  skill-improver-prompt-quality.md.eta  skill-improver-tool-scoping.md.eta  taste-readability.md.eta  taste-scope.md.eta  taste-spec.md.eta
agents/_partials/: read-only-contract.md
commands/: affine.md  age.md  briesearch.md  cheese.md  cook.md  culture.md  cure.md  debug.md  explore.md  fromage.md  incremental.md  mold.md  nih-audit.md  pr-finish.md  skill-improver.md
examples/: models.yaml
hooks/: cheese-bootstrap.sh
python/: mcp_server.py  milknado.py
python/cheese_flow/: __init__.py  cli.py  mcp_server.py
python/milknado/: __init__.py  config.py  mcp_server.py
references/: README.md  canonical-cheese.md  dotfiles-takeover-inventory.md  sliced-bread.md
skills/: README.md
src/: index.ts
tests/: adversarial.test.ts  affine-flow.test.ts  capabilities.test.ts  cheese-bootstrap.test.ts  cheese-dir.test.ts  cheese-home.test.ts  compiler-commands.test.ts  compiler.test.ts  cook-flow.test.ts  cure-flow.test.ts  cursor-surface.test.ts  fromage-flow.test.ts  frontmatter.test.ts  harness-compat.test.ts  harness-detection.test.ts  hooks.test.ts  install-plan.test.ts  installer.test.ts  lint-skill-source.test.ts  lint-skills-directory.test.ts  lint-skills.test.ts  mcp-proxy.test.ts  mcp.test.ts  milknado.test.ts  model-manifest.test.ts  package-scripts.test.ts  plugin-manifest.test.ts  session-start.test.ts  skill-improver-flow.test.ts  sweeper.test.ts
(+256 files in other folders)
