[project]
name = "cheese-flow-milknado"
version = "0.1.0"
description = "Python backend for the cheese-flow milknado command."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp==1.27.0",
  "ortools==9.14.6206",
  "rich==14.2.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["python"]
addopts = "-q"
