[project]
name = "cheese-flow-milknado"
version = "0.1.0"
description = "Python backend for the cheese-flow milknado command."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "code-review-graph>=2.3.2",
  "fastmcp>=2.14",
  "ortools>=9.11",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "pyyaml>=6",
  "ralphify @ git+https://github.com/paulnsorensen/ralphify@main",
  "structlog>=24.1",
  "tiktoken>=0.12",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4",
  "ruff>=0.4",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["python"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dist", ".claude", ".codex"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
