[project]
name = "cheese-flow"
version = "0.1.0"
description = "Portable agent and skill bundle compiler for Claude Code, Codex, Cursor, and Copilot CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2==3.1.6",
  "mcp==1.27.0",
  "ortools==9.14.6206",
  "pydantic==2.13.4",
  "rich==14.2.0",
  "ruamel.yaml==0.19.1",
  "typer==0.25.1",
]

[project.scripts]
cheese = "cheese_flow.cli:app"

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "ruff==0.14.5",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "python"
module-name = ["cheese_flow", "milknado"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["python"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dist", ".claude", ".codex"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
